web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
      containers:
        - name: webapp
          image: mongo-express:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - name: http 
      protocol: TCP
      port: 8081
      targetPort: 8081
