ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: mern.191c528f-d6d6-4184-9df6-cdd35a46fa46.k8s.civo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              name: http
